--- a/spring-auth-jwt/build.gradle
+++ b/spring-auth-jwt/build.gradle
@@ -1,9 +1,11 @@
 buildscript {
 	ext {
-		springBootVersion = '1.5.3.RELEASE'
+        springBootVersion = '2.0.0.M5'
 	}
 	repositories {
-		mavenCentral()
+        mavenCentral()
+        maven { url "https://repo.spring.io/snapshot" }
+        maven { url "https://repo.spring.io/milestone" }
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
@@ -13,12 +15,15 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
 	mavenCentral()
+    maven { url "https://repo.spring.io/snapshot" }
+    maven { url "https://repo.spring.io/milestone" }
 }
 
 
